fixing thing on point

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -163,7 +163,7 @@
                         <h3>Check our story</h3>
                     </header>
                     <p class="lead">Simply the best food maker in the Continent with exceptional  cares, styling, and thorough preservation and  and cleaning of meals.
-                    Well Ventilate environment and heaven on earth structure in place @Techsavvyng Resturant, Simply the best of it kind.</p>
+                    Well Ventilate environment and heaven on earth structure in place @Techsavvyng Restaurant, Simply the best of it kind.</p>
                 </div>
             </section>
             <!-- End About Section -->
@@ -239,7 +239,7 @@
                             <div class="text">
                                 <h4>Ofada Rice</h4>
                                 <p>The best ofada rice that you ever eat or taste in the whole continent is birthed here, try to order for a taste of it...</p>
-                                <button type="button" class="btn btn-outline-primary">Checkout Now</button>
+                                <button type="submit" class="btn btn-primary">Checkout Now</button>
                             </div>
                         </div>
 
@@ -254,7 +254,7 @@
                             <div class="text">
                                 <h4>Ewa Agbonyi with Bread</h4>
                                 <p>If you dare taste our ewa Agbonyi, you will forget about all the worries in your life and you will want to fall in love with our Kitchen....</p>
-                                <button type="button" class="btn btn-outline-primary">Checkout Now</button>
+                                <button type="submit" class="btn btn-primary">Checkout Now</button>
                             </div>
                         </div>
 
@@ -269,7 +269,7 @@
                             <div class="text">
                                 <h4>Egusi & Pounded Yam</h4>
                                 <p>Our Egusi & Pounded Yam is another cause trouble sensation food, that will make you forget about your bea/boo while taking a place of it.</p>
-                                <button type="button" class="btn btn-outline-primary">Checkout Now</button>
+                                <button type="submit" class="btn btn-primary">Checkout Now</button>
                             </div>
                         </div>
 
@@ -284,7 +284,7 @@
                             <div class="text">
                                 <h4>Rice & Chicken</h4>
                                 <p>Rice & Chicken is our International awarding winning food, that the President of United State fall in love with which make him order for moreeee.</p>
-                                <button type="button" class="btn btn-outline-primary">Checkout Now</button>
+                                <button type="submit" class="btn btn-primary">Checkout Now</button>
                             </div>
                         </div>
 
@@ -299,7 +299,7 @@
                             <div class="text">
                                 <h4>Shawama+</h4>
                                 <p>Our Shawama+ is a BAE, that every Celebrity want to take a shot of it....</p>
-                                <button type="button" class="btn btn-outline-primary">Checkout Now</button>
+                                <button type="submit" class="btn btn-primary">Checkout Now</button>
                             </div>
                         </div>
 
@@ -314,7 +314,7 @@
                             <div class="text">
                                 <h4>Hot Dog (101)</h4>
                                 <p>Our Hot Dog get class that's why it's call "HOT DOG 101", delight, the hot-dog is full of ingredient beyond your imagination...</p>
-                                <button type="button" class="btn btn-outline-primary">Checkout Now</button>
+                                <button type="submit" class="btn btn-primary">Checkout Now</button>
                             </div>
                         </div>
                     </div>
@@ -430,7 +430,7 @@
             <section id="gallery" class="gallery">
                 <div class="container text-center">
                     <header>
-                        <h2>Our Gallery</h2>
+                        <h2>Our Kitchen Show</h2>
                         <h3>Discover the photo gallery</h3>
                     </header>
 
@@ -611,7 +611,7 @@
                             <div class="header">
                                 <img src="/img/logo-footer.jpg" alt="italiano" width="100">
                             </div>
-                            <p>Nigerian No.1 Best Food Maker ofthe Year, giving the most sensational food, drink, and appetitizer around the Universe.</p>
+                            <p>Nigerian No.1 Best Food Maker of the Year, giving the most sensational food, drink, and appetizer around the Universe.</p>
                         </div>
 
                         <div class="col-md-4 contact">
