--- a/public/css/style.default.css
+++ b/public/css/style.default.css
@@ -2099,7 +2099,7 @@ h6,
 .h4,
 .h5,
 .h6 {
-  font-family: 'Dancing Script', cursive;
+  font-family: 'Lobster', cursive;
   font-weight: 700;
   line-height: 1.2;
   color: #111111;
@@ -2208,7 +2208,7 @@ blockquote .small {
 blockquote footer:before,
 blockquote small:before,
 blockquote .small:before {
-  content: '\2014 \00A0';
+  content: '\2019 \00A0';
 }
 .blockquote-reverse,
 blockquote.pull-right {
