--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,70 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <!-- Responsive meta -->
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <!-- IE Compatibility meta -->
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <!-- Description meta -->
-        <meta name="description" content="...">
-        <!-- Author meta -->
-        <meta name="author" content="Bootstrap Temple">
 
-        <!-- Page Title -->
-        <title>Techsavvyng Restaurant - TSR</title>
-        <!-- Favicon -->
-        <link rel="shortcut icon" href="/img/favicon.ico">
+   <% include ./partials/head %>
 
-        <!-- Bootstrap -->
-        <link rel="stylesheet" href="/css/bootstrap.min.css">
-        <!-- Custom font icons -->
-        <link rel="stylesheet" href="https://file.myfontastic.com/6AeAYiqp5KBjSiZ2tE8WJW/icons.css">
-        <!-- Font Awesome -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <!-- Slider -->
-        <link rel="stylesheet" href="/css/slider.min.css">
-        <!-- Lightbox Pop up -->
-        <link rel="stylesheet" href="/css/lightbox.min.css">
-        <!-- Datepicker -->
-        <link rel="stylesheet" href="/css/datepicker.min.css">
-        <!-- Datepicker -->
-        <link rel="stylesheet" href="/css/timepicki.min.css">
-        <!-- Owl Carousel -->
-        <link rel="stylesheet" href="/css/owl.carousel.min.css">
-        <!-- Custom CSS -->
-        <link rel="stylesheet" href="/css/style.default.css">
-        <!-- Modernizr -->
-        <script type="text/javascript" src="/js/modernizr.custom.79639.min.js"></script>
-    </head>
-    <body>
+<body>
 
         <div class="page-holder">
             <!-- Navbar -->
-            <header class="header">
-                <nav class="navbar navbar-default navbar-fixed-top">
-                    <div class="container">
-                        <div class="navbar-header"><a href="index.ejs" class="navbar-brand"><img src="/img/logo.jpg" alt="Italiano" width="100"></a>
-                            <div class="navbar-buttons">
-                                <button type="button" data-toggle="collapse" data-target=".navbar-collapse" class="navbar-toggle navbar-btn">Menu<i class="fa fa-align-justify"></i></button>
-                            </div>
-                        </div>
-                        <div id="navigation" class="collapse navbar-collapse navbar-right">
-                            <ul class="nav navbar-nav">
-                                <li class="active"><a href="#hero">Home</a></li>
-                                <li><a href="#about">About</a></li>
-                                <li><a href="#services">Services</a></li>
-                                <li><a href="#dishes">Dishes</a></li>
-                                <li><a href="#menu">Menu</a></li>
-                                <li><a href="#gallery">Gallery</a></li>
-                                <li><a href="#booking">Reservation</a></li>
-                                <li><a href="#contact">Contact</a></li>
-                            </ul>
-                            <a href="#" class="btn navbar-btn btn-unique hidden-sm hidden-xs" id="open-reservation">Make a Reservation</a>
-                        </div>
-                    </div>
-                </nav>
-            </header><!-- End Navbar -->
+            <!-- End Navbar -->
 
 
 
@@ -516,58 +459,7 @@
 
 
             <!-- Booking Section -->
-            <section id="booking" class="booking">
-                <div class="container text-center">
-                    <header>
-                        <h2>Order your table</h2>
-                        <h3>Enjoy your meal at our restaurant</h3>
-                    </header>
-
-                    <div class="row">
-                        <div class="form-holder col-md-10 col-md-push-1 text-center">
-                            <div class="ribbon">
-                                <i class="fa fa-star"></i>
-                            </div>
-
-                            <h2>Make a reservation</h2>
-                            <h3>Book your table now</h3>
-
-                            <form id="booking-form" method="get" action="#">
-                                <div class="row">
-                                    <div class="col-md-10 col-md-push-1">
-                                        <div class="row">
-                                            <label for="name" class="col-sm-6 unique">Name
-                                                <input name="name" type="text" id="name" required>
-                                            </label>
-                                            <label for="email" class="col-sm-6 unique">Email
-                                                <input name="email" type="email" id="email" required>
-                                            </label>
-                                            <label for="number" class="col-sm-6 unique">Number
-                                                <input name="number" type="text" id="number" required>
-                                            </label>
-                                            <label for="people" class="col-sm-6 unique">How Many People
-                                                <input name="people" type="number" id="people" min="1" required>
-                                            </label>
-                                            <label for="date" class="col-sm-6 unique">Date
-                                                <input name="date" type="text" id="date" class="datepicker-here" data-language='en' required>
-                                            </label>
-                                            <label for="time" class="col-sm-6 unique">Time
-                                                <input name="time" type="text" id="time" class="timepicker" required>
-                                            </label>
-                                            <label for="request" class="col-sm-12 unique">Special Request
-                                                <textarea id="request" name="request" required></textarea>
-                                            </label>
-                                            <div class="col-sm-12">
-                                                <button type="submit" class="btn-unique">Book Now</button>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </section>
+                <% include ./partials/booking-section %>
             <!-- End Booking Section -->
 
 
@@ -604,68 +496,7 @@
 
 
             <!-- Footer -->
-            <footer id="mainFooter" class="mainFooter">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-4 brief">
-                            <div class="header">
-                                <img src="/img/logo-footer.jpg" alt="italiano" width="100">
-                            </div>
-                            <p>Nigerian No.1 Best Food Maker of the Year, giving the most sensational food, drink, and appetizer around the Universe.</p>
-                        </div>
-
-                        <div class="col-md-4 contact">
-                            <div class="header">
-                                <h6>Contact</h6>
-                            </div>
-                            <ul class="contact list-unstyled">
-                                <li><span class="icon-map text-primary"></span>Yaba, Lagos, NG, 23401</li>
-                                <li><a href="mailto:foodie@techsavvyng-resturant.food"><span class="icon-phone text-primary"></span>foodie@techsavvyng-resturant.food</a></li>
-                                <li><span class="icon-mail text-primary"></span>2349033536902</li>
-                                <li><span class="icon-printer text-primary"></span>Available upon request.</li>
-                            </ul>
-                        </div>
-
-                        <div class="col-md-4 newsletter">
-                            <div class="header">
-                                <h6>Newsletter</h6>
-                            </div>
-                            <p>Join our million subscriber, getting update about the latest food recipes, we drop every weekend.</p>
-                            <form action="#" id="subscribe" class="clearfix">
-                                <input type="email" name="subscribtion-email" placeholder="Enter Your Email Address" class="pull-left">
-                                <button type="submit" class="btn-unique has-border pull-left">Subscribe</button>
-                            </form>
-                        </div>
-                    </div>
-
-                    <ul class="social list-unstyled list-inline">
-                        <li><a href="#" target="_blank" title="Facebook"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="#" target="_blank" title="Twitter"><i class="fa fa-twitter"></i></a></li>
-                        <li><a href="#" target="_blank" title="Instagram"><i class="fa fa-instagram"></i></a></li>
-                        <li><a href="#" target="_blank" title="Google plus"><i class="fa fa-google-plus"></i></a></li>
-                        <li><a href="#" target="_blank" title="Pinterest"><i class="fa fa-pinterest"></i></a></li>
-                        <li><a href="#" target="_blank" title="Skype"><i class="fa fa-skype"></i></a></li>
-                    </ul>
-                </div>
-
-                <div class="copyrights">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-sm-5">
-                                <ul class="list-unstyled list-inline">
-                                    <li><a href="#">Policy Privacy</a></li>
-                                    <li><a href="#">Terms of Use</a></li>
-                                    <li><a href="#">Contact</a></li>
-                                </ul>
-                            </div>
-
-                            <div class="col-sm-7">
-                                <p>&copy; 2019 Techsavvyng Restaurant. </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </footer>
+                <% include ./partials/footer %>
             <!-- End Footer -->
 
             <!-- scroll top btn -->
@@ -737,7 +568,7 @@
         <script src="/js/timepicki.min.js"></script>
         <script src="/js/jquery.validate.min.js"></script>
         <script src="/js/smooth.scroll.min.js"></script>
-        <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC0dSWcBx-VghzhzQB6oCMTgeXMOhCYTvk"></script>
+        <!-- <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC0dSWcBx-VghzhzQB6oCMTgeXMOhCYTvk"></script> -->
         <script src="/js/map.min.js"></script>
         <script src="/js/script.js"></script>
     </body>
