--- a/public/css/style.default.css
+++ b/public/css/style.default.css
@@ -157,8 +157,8 @@ header {
 }
 section {
   position: relative;
-  padding-top: 150px;
-  padding-bottom: 150px;
+  padding-top: 25px;
+  padding-bottom: 20px;
 }
 section.section--no-padding {
   padding-top: 0;
@@ -748,7 +748,7 @@ section.about::before {
   content: '';
   display: block;
   background-position: center center;
-  background: url(../img/dish-d.png) no-repeat;
+  /* background: url(../img/dish-d.png) no-repeat; */
   background-size: 100%;
   position: absolute;
   max-width: 300px;
