Change BGIMAGE to a more reponsive one

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,7 +18,7 @@
                     <div class="sl-slider">
                         <!-- slide -->
                         <div class="sl-slide bg-1" data-orientation="horizontal" data-slice1-rotation="-25" data-slice2-rotation="-25" data-slice1-scale="2" data-slice2-scale="2">
-                            <div class="sl-slide-inner" style="background-image: url(img/dish-c.png);">
+                            <div class="slide-bgimage sl-slide-inner">
                                 <div class="container">
                                     <h2>This is <span class="text-primary">Techsavvyng restaurant</span></h2>
                                     <h1>Best Food maker of the Century</h1>
@@ -27,7 +27,7 @@
                         </div>
                         <!-- slide -->
                         <div class="sl-slide bg-2" data-orientation="vertical" data-slice1-rotation="10" data-slice2-rotation="-15" data-slice1-scale="1.5" data-slice2-scale="1.5">
-                            <div class="sl-slide-inner" style="background-image: url(img/dish-e.png);">
+                            <div class="sl-slide-inner slide-bgimage" style="background-image: url(../images/3.jpg);">
                                 <div class="container">
                                     <h1>The Top in Food Making and Discovery</h1>
                                     <p>Locate here now and get the most of us.</p>
@@ -36,7 +36,7 @@
                         </div>
                         <!-- slide -->
                         <div class="sl-slide bg-3" data-orientation="horizontal" data-slice1-rotation="3" data-slice2-rotation="3" data-slice1-scale="2" data-slice2-scale="1">
-                            <div class="sl-slide-inner" style="background-image: url(img/dish-a.png);">
+                            <div class="sl-slide-inner slide-bgimage" style="background-image: url(../images/4.jpg);">
                                 <div class="container">
                                     <h2>Visit <span class="text-primary">Techsavvyng restaurant</span></h2>
                                     <h1>The Best Resturant to eat the best</h1>
