--- a/public/css/style.default.css
+++ b/public/css/style.default.css
@@ -256,6 +256,21 @@ a:hover {
 .pages {
   text-align: center;
 }
+
+.slide-bgimage {
+  width: 100%;
+  height: 100%;
+  background-image: url(../images/2.jpg);
+}
+
+
+@media screen and (max-width: 600px) {
+  .slide-bgimage {
+    width: 50%;
+    height: 50%;
+    background-image: url(../images/2.jpg);
+  }
+}
 /* ==========================================
    DATE PICKER STYLE
    ========================================== */
